olfs: rewinding a failed check in

--- a/resources/experiments/jsp/WEB-INF/web.xml
+++ b/resources/experiments/jsp/WEB-INF/web.xml
@@ -167,7 +167,7 @@
     <servlet>
         <servlet-name>webstart</servlet-name>
 
-        <servlet-class>opendap.viewers.ViewersServlet</servlet-class>
+        <servlet-class>opendap.webstart.WebStartServlet</servlet-class>
 
         <init-param>
             <param-name>WebStartConfigFileName</param-name>
