olfs: Checking in dispatch support for JSON encodings of data and dmr.

--- a/resources/experiments/jsp/WEB-INF/web.xml
+++ b/resources/experiments/jsp/WEB-INF/web.xml
@@ -165,9 +165,9 @@
 
 
     <servlet>
-        <servlet-name>webstart</servlet-name>
+        <servlet-name>viewers</servlet-name>
 
-        <servlet-class>opendap.webstart.WebStartServlet</servlet-class>
+        <servlet-class>opendap.viewers.ViewersServlet</servlet-class>
 
         <init-param>
             <param-name>WebStartConfigFileName</param-name>
@@ -209,8 +209,8 @@
     </servlet-mapping>
 
     <servlet-mapping>
-        <servlet-name>webstart</servlet-name>
-        <url-pattern>/webstart/*</url-pattern>
+        <servlet-name>viewers</servlet-name>
+        <url-pattern>/viewers/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
