--- a/managed-access/resources/hyrax/WEB-INF/web.xml
+++ b/managed-access/resources/hyrax/WEB-INF/web.xml
@@ -139,7 +139,7 @@
   <!--   Please see the "Using Jikes" section of the Jasper-HowTo           -->
   <!--   page in the Tomcat documentation.                                  -->
 
-    <filter>
+    <!--filter>
    		<filter-name>IdFilter</filter-name>
    		<filter-class>opendap.auth.IdFilter</filter-class>
         <init-param>
@@ -156,18 +156,18 @@
    	<filter-mapping>
    		<filter-name>IdFilter</filter-name>
    		<url-pattern>/*</url-pattern>
-   	</filter-mapping>
+   	</filter-mapping-->
 
     <filter>
-   		<filter-name>PermissionsFilter</filter-name>
-   		<filter-class>opendap.auth.PermissionsFilter</filter-class>
+   		<filter-name>PEP</filter-name>
+   		<filter-class>opendap.auth.PEPFilter</filter-class>
         <init-param>
             <param-name>config</param-name>
             <param-value>/Users/ndp/hyrax/ANU/apache-tomcat-7.0.53/content/opendap/permFilter.xml</param-value>
         </init-param>
    	</filter>
    	<filter-mapping>
-   		<filter-name>PermissionsFilter</filter-name>
+   		<filter-name>PEP</filter-name>
    		<url-pattern>/*</url-pattern>
    	</filter-mapping>
 
@@ -224,7 +224,6 @@
         <servlet-class>opendap.experiments.EchoServlet </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet -->
-
 
 
 
