--- a/build.xml
+++ b/build.xml
@@ -202,7 +202,7 @@
 
 
     <!-- Libraries -->
-    <property name="json.lib"       value="json-simple-1.1.1.jar"/>
+    <property name="json.lib"       value="gson-2.3.1.jar"/>
 
 
     <property name="junit.lib"       value="junit-4.4.jar"/>
