olfs: Updated servlet api to 3.0. Tomcat 7.x uses 3.0 so we are moving forawrd. The 3.0 api utilizes generics and so this will get rid of a bunch of unchecked warnings. woot.

--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -172,6 +172,7 @@
     <servlet>
         <servlet-name>w10n</servlet-name>
         <servlet-class>opendap.w10n.W10nServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet>
