--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -139,8 +139,6 @@
   <!--   Please see the "Using Jikes" section of the Jasper-HowTo           -->
   <!--   page in the Tomcat documentation.                                  -->
 
-
-
     <filter>
         <filter-name>ClickJackFilter</filter-name>
         <filter-class>opendap.coreServlet.ClickjackFilter</filter-class>
@@ -178,6 +176,13 @@
     <servlet>
         <servlet-name>adminInterface</servlet-name>
         <servlet-class>opendap.hai.DispatchServlet</servlet-class>
+        <!-- Most people don't use the HAI, so don't load it by default -->
+    </servlet>
+
+    <servlet>
+        <servlet-name>aggregation</servlet-name>
+        <servlet-class>opendap.aggregation.AggregationServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
     </servlet>
 
     <servlet>
@@ -194,7 +199,6 @@
 
     </servlet>
 
-
     <servlet>
         <servlet-name>docs_servlet</servlet-name>
         <servlet-class>opendap.coreServlet.DocServlet </servlet-class>
@@ -202,15 +206,11 @@
         <load-on-startup>1</load-on-startup>
     </servlet>
 
-
     <!-- servlet>
         <servlet-name>echo</servlet-name>
         <servlet-class>opendap.experiments.EchoServlet </servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet -->
-
-
-
 
     <filter>
         <filter-name>UrlRewriteFilter</filter-name>
@@ -262,20 +262,15 @@
         <url-pattern>/docs/*</url-pattern>
     </servlet-mapping>
 
-
-
     <servlet-mapping>
         <servlet-name>w10n</servlet-name>
         <url-pattern>/w10n/*</url-pattern>
     </servlet-mapping>
 
-
-
-
-
-
-
-
+    <servlet-mapping>
+        <servlet-name>aggregation</servlet-name>
+        <url-pattern>/aggregation/*</url-pattern>
+    </servlet-mapping>
 
   <!-- ==================== Default Session Configuration ================= -->
   <!-- You can set the default session timeout (in minutes) for all newly   -->
@@ -284,9 +279,6 @@
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
-
-
-
 
     <!-- Default Error Page Definitions -->
     <error-page>
