Hacking toward some sort of BES interaction...

--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -175,6 +175,12 @@
     </servlet>
 
     <servlet>
+        <servlet-name>aggregation</servlet-name>
+        <servlet-class>opendap.aggregation.AggregationServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <servlet>
         <servlet-name>adminInterface</servlet-name>
         <servlet-class>opendap.hai.DispatchServlet</servlet-class>
     </servlet>
@@ -261,20 +267,15 @@
         <url-pattern>/docs/*</url-pattern>
     </servlet-mapping>
 
-
+    <servlet-mapping>
+        <servlet-name>aggregation</servlet-name>
+        <url-pattern>/aggregation/*</url-pattern>
+    </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>w10n</servlet-name>
         <url-pattern>/w10n/*</url-pattern>
     </servlet-mapping>
-
-
-
-
-
-
-
-
 
   <!-- ==================== Default Session Configuration ================= -->
   <!-- You can set the default session timeout (in minutes) for all newly   -->
