Aggregation servlet 1.0 beta
Fixed some warning issues, documentation, unused code, ...
Also, added the sole unit test file to build.xml and hacked
in the README file a bit.

--- a/build.xml
+++ b/build.xml
@@ -316,6 +316,7 @@
           <classpath refid="olfs.compile.classpath"/>
 
           <test name="opendap.coreServlet.Scrub" />
+          <test name="opendap.aggregation.AggregationParamsTest" />
 
         </junit>
     </target>
