--- a/build.xml
+++ b/build.xml
@@ -222,6 +222,7 @@
     <property name="commons-httpclient.lib" value="apache-commons-httpclient-3.1.jar"/>
     <property name="commons-lang.lib"       value="apache-commons-lang-2.5.jar"/>
     <property name="commons-logging.lib"    value="apache-commons-logging-1.1.3.jar"/>
+    <property name="commons-io.lib"         value="apache-commons-io-2.4.jar"/>
 
     <property name="xalan.lib"         value="xalan.jar"/>
     <property name="xercesImpl.lib"    value="xercesImpl-2.8.1.jar"/>
@@ -255,6 +256,7 @@
             <include name="${commons-logging.lib}"/>
             <include name="${commons-codec.lib}"/>
             <include name="${commons-lang.lib}"/>
+            <include name="${commons-io.lib}"/>
             <include name="${saxon-jdom.lib}"/>
             <include name="${saxon-s9api.lib}"/>
             <include name="${saxon.lib}"/>
@@ -724,6 +726,7 @@
                 <include name="${commons-httpclient.lib}"/>
                 <include name="${commons-logging.lib}"/>
                 <include name="${commons-codec.lib}"/>
+                <include name="${commons-io.lib}"/>
                 <include name="${xercesImpl.lib}"/>
                 <include name="${xercesXmlApis.lib}"/>
                 <include name="${saxon-jdom.lib}"/>
