--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ out
 ## Build dir
 build
 
+# Is there a file called ']' somewhere in this project? jhrg 3/11/15
 ]
 
 ##
@@ -19,3 +20,6 @@ build
 
 ## Emacs backup files
 *~
+
+## aggregation servlet
+src/opendap/aggregation/AggregationServletTest.java.broken
