--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -148,7 +148,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     
-    <filter>
+    <!-- filter>
         <filter-name>PEP</filter-name>
         <filter-class>opendap.auth.PEPFilter</filter-class>
         <init-param>
@@ -159,7 +159,7 @@
     <filter-mapping>
         <filter-name>PEP</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping -->
                     
 
     <servlet>
