olfs: Removed prototype auth/authz code from build and distro. Scrubbed some w10n output.".

--- a/build.xml
+++ b/build.xml
@@ -359,6 +359,9 @@
                 <!-- Exclude the experimental code  -->
                 <exclude name="opendap/experiments/**"/>
 
+                <!-- Exclude the auth code  -->
+                <exclude name="opendap/auth/**"/>
+
                 <!-- Exclude the Metacat code  -->
                 <exclude name="opendap/metacat/**"/>
 
