Suppressed doclint in java doc because I don't have time to fix it all the javadoc issues  (>100 errors)

--- a/build.xml
+++ b/build.xml
@@ -492,6 +492,7 @@
                  Verbose="true"
                  Version="true"
                  failonerror="true"
+                 additionalparam="-Xdoclint:none"
                 >
             <classpath refid="olfs.compile.classpath"/>
 
