--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ branches:
   only:
     - master
 
+notifications:
+  email:
+    - ndp@opendap.org
+    - jgallagher@opendap.org
+    
 # Use this to prepare the system to install prerequisites or dependencies
 #
 # before_install:
