--- a/build.xml
+++ b/build.xml
@@ -181,13 +181,6 @@
     <property name="distributionResources.dir"  location="${resources.dir}/distribution"/>
 
     <property name="hyraxResources.dir" location="${resources.dir}/hyrax"/>
-    <property name="ncISO.dir" location="${resources.dir}/nciso"/>
-    <property name="GatewayResources.dir" location="${resources.dir}/gateway"/>
-    <property name="WebStartResources.dir" location="${resources.dir}/WebStart"/>
-    <property name="WCS.dir" location="${resources.dir}/WCS"/>
-
-
-    <property name="jspServerWebInf.dir" location="resources/experiments/jsp/WEB-INF"/>
 
 
 
@@ -392,31 +385,31 @@
         </copy>
 
 
-        <!-- Copy and filter all of the hyrax resources -->
+        <!-- Copy and filter all of the hyrax resources   -->
         <copy todir="${build.resources}" filtering="true">
             <fileset dir="${hyraxResources.dir}"/>
         </copy>
 
-
-        <!-- Copy and filter all of the gateway resources -->
+        <!--
+        #Copy and filter all of the gateway resources#
         <copy todir="${build.resources}/gateway" filtering="true">
             <fileset dir="${GatewayResources.dir}"/>
         </copy>
 
 
-        <!-- Copy and filter all of the WebStart resources -->
+        #Copy and filter all of the WebStart resources #
         <copy todir="${build.resources}/WebStart" filtering="true">
             <fileset dir="${WebStartResources.dir}"/>
         </copy>
 
 
-        <!-- Copy and filter all of the ncISO resources -->
+        #Copy and filter all of the ncISO resources #
         <copy todir="${build.resources}/nciso" filtering="true">
-            <fileset dir="${ncISO.dir}"/>
+            <fileset dir="/nciso"/>
         </copy>
 
 
-
+        -->
     </target>
 
 
