olfs: More error handling changes. Dumped the use of XSLT in BESError processing in favor of the more reliable set of JSP pages to which all other errors are directed. This greatly streamlines the error processing, reduces complexity, and allows for a consistent pattern of error handling at the top level of our various servlets.

--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -295,6 +295,14 @@
         <location>/error/error404.jsp</location>
     </error-page>
     <error-page>
+        <error-code>406</error-code>
+        <location>/error/error406.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>418</error-code>
+        <location>/error/error418.jsp</location>
+    </error-page>
+    <error-page>
         <error-code>500</error-code>
         <location>/error/error500.jsp</location>
     </error-page>
