Added new curl test that checks the returned document AND the http ststus (in the header). Add initial error responses tests.

--- a/hyrax_tests/Makefile.am
+++ b/hyrax_tests/Makefile.am
@@ -25,7 +25,7 @@ AUTOM4TE = autom4te
 HYRAX_TEST_SUITE = $(srcdir)/hyraxTest
 HYRAX_TEST_SUITE_FLAGS =
 
-$(HYRAX_TEST_SUITE): $(HYRAX_TEST_SUITE).at $(srcdir)/handler_tests_macros.m4 $(srcdir)/package.m4
+$(HYRAX_TEST_SUITE): $(HYRAX_TEST_SUITE).at $(srcdir)/curl_test_macros.m4 $(srcdir)/package.m4
 
 check-local: atconfig atlocal $(HYRAX_TEST_SUITE)
 	@echo "Run tests with an empty cache"
