--- a/build.xml
+++ b/build.xml
@@ -400,7 +400,8 @@
         <echo level="info" message="AntFile: ${ant.file} Compiling OLFS"/>
         <echo level="info"
               message="Using the ${build.compiler} javac compiler"/>
-        <echo level="info" message="JAVA_HOME:             ${java.home}"/>
+        <echo level="info" message="java.home (ant):       ${java.home}"/>
+        <echo level="info" message="env.JAVA_HOME (shell): ${env.JAVA_HOME}"/>
         <echo level="info" message="Target JVM Version:    ${compile.TARGET}"/>
         <echo level="info" message="Source Syntax Version: ${compile.SOURCE}"/>
         <echo level="info" message=""/>
