Recomitted to BesCatalogCache, added ContextListener and got it working as a worker thread.

--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -148,6 +148,9 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <listener>
+        <listener-class>opendap.bes.caching.CatalogCacheUpdater</listener-class>
+    </listener>
 
     <servlet>
         <servlet-name>hyrax</servlet-name>
