Changed the Dap4Responder.addTypeSuffixToDownloadFilename() behavior
Now the code will use the original behavior when this is false (always
add the suffix), or _replace_ the existing suffix if it's true. I added
a unit test file for Dap4Responder and wrote tests for the new code.

--- a/build.xml
+++ b/build.xml
@@ -316,7 +316,8 @@
     </target>
 
 
-
+    <!-- It would be better if this target only copied the files that have chenaged.
+         jhrg 5/26/16 -->
     <target name="check"
             description="Run Unit Tests"
             depends="compile"
@@ -332,6 +333,8 @@
 
           <test name="opendap.coreServlet.Scrub" />
           <test name="opendap.aggregation.AggregationParamsTest" />
+
+          <test name="opendap.bes.dap4Responders.Dap4ResponderTest" />
 
         </junit>
     </target>
