REpaired problems with bottstrap installation. Made like olfs.

--- a/resources/WCS/2.0/WEB-INF/web.xml
+++ b/resources/WCS/2.0/WEB-INF/web.xml
@@ -48,6 +48,10 @@
         <servlet-name>wcs</servlet-name>
 
         <servlet-class>opendap.wcs.v2_0.http.Servlet</servlet-class>
+        <init-param>
+            <param-name>ConfigFileName</param-name>
+            <param-value>wcs_service.xml</param-value>
+        </init-param>
 
         <load-on-startup>1</load-on-startup> 
 
