--- a/resources/WCS/2.0/WEB-INF/web.xml
+++ b/resources/WCS/2.0/WEB-INF/web.xml
@@ -81,6 +81,12 @@
         <session-timeout>20</session-timeout>
     </session-config>
 
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+    </welcome-file-list>
+
 
 
 
