--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -190,10 +190,10 @@
     <servlet>
         <servlet-name>adminInterface</servlet-name>
         <servlet-class>opendap.hai.DispatchServlet</servlet-class>
-        <init-param>
+        <!-- init-param>
             <param-name>DeveloperMode</param-name>
             <param-value>true</param-value>
-        </init-param>
+        </init-param -->
         <!-- Most people don't use the HAI, so don't load it by default -->
         <!-- load-on-startup>1</load-on-startup -->
     </servlet>
@@ -361,14 +361,14 @@
             <url-pattern>/admin/*</url-pattern>
         </web-resource-collection>
 
-        <!--auth-constraint>
+        <auth-constraint>
             <role-name>manager</role-name>
-        </auth-constraint -->
+        </auth-constraint>
 
         <user-data-constraint>
             <!-- this ensures that all efforts to access the admin interface nd resources must use HTTPS -->
-            <!--transport-guarantee>CONFIDENTIAL</transport-guarantee -->
-            <transport-guarantee>NONE</transport-guarantee>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+            <!-- transport-guarantee>NONE</transport-guarantee -->
         </user-data-constraint>
     </security-constraint>
 
