--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ notifications:
 #
 script:
   - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+  - ant check
   
 # after_script:
 env:
